--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,9 @@ docker-compose.override.yml
 
 # actions-hub
 .github/actions-hub
+
+# VS Code workspace
+*.code-workspace
+
+# Local development files
+dev/
