--- a/.github/workflows/labelstudio-deploy.yml
+++ b/.github/workflows/labelstudio-deploy.yml
@@ -23,14 +23,13 @@ env:
   tls_secret_name: "ingress-tls-labelstudio"
   postgres_secret_name: "postgres-dev-labelstudio"
   PGPASSWORD: "${{secrets.PGPASSWORD}}"
+  ENV: "${{ inputs.environment }}"
 
 jobs:
   deployment:
     environment:
       name: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
-    env:
-      ENV: ${{ inputs.environment }}
 
     steps:
       - uses: actions/checkout@v3
