chore: Update environment variable, TLS secret name, and postgres secret name in labelstudio-deploy.yml

--- a/.github/workflows/labelstudio-deploy.yml
+++ b/.github/workflows/labelstudio-deploy.yml
@@ -83,6 +83,6 @@ jobs:
             ${{secrets.ARM_TENANT_ID}} \
             ${{env.postgres_secret_name}} \
             ${{env.PGPASSWORD}} \
-            ${{env.ENV}} \
+            "dev" \
             ${{env.namespace}} # placeholder
 
