--- a/.github/workflows/labelstudio-deploy.yml
+++ b/.github/workflows/labelstudio-deploy.yml
@@ -31,7 +31,6 @@ env:
   tls_secret_name: "ingress-tls-labelstudio"
   postgres_secret_name: "postgres-dev-labelstudio"
   PGPASSWORD: "${{ secrets.PGPASSWORD }}"
-  ENV_VAR: "${{ github.event.inputs.build }}"
 
 jobs:
   deployment:
@@ -50,6 +49,8 @@ jobs:
       # mask the ouptuts
       - name: Get keyvault secrets
         id: kvsecrets
+        env:
+          ENV: ${{ inputs.environment }}
         run: |
           echo "::add-mask::$POSTGRES_KEYVAULT"
           DB_HOST=$(./keyvault.sh host $POSTGRES_KEYVAULT)
@@ -78,6 +79,8 @@ jobs:
             --PGPASSWORD ${{ env.PGPASSWORD }}
 
       - name: Update helm chart and values
+        env:
+          ENV_VAR: ${{ github.event.inputs.environment }}
         run: |
           source ./deployment.sh
           deploy_labelstudio \
@@ -91,7 +94,6 @@ jobs:
             ${{ secrets.ARM_TENANT_ID }} \
             ${{ env.postgres_secret_name }} \
             ${{ env.PGPASSWORD }} \
-            ${{ env.namespace }} \ # placeholder
             ${{ env.ENV_VAR }}
             
 
