--- a/.github/workflows/labelstudio-deploy.yml
+++ b/.github/workflows/labelstudio-deploy.yml
@@ -82,7 +82,6 @@ jobs:
             ${{ steps.kvsecrets.outputs.DB_PASSWORD }} \
             ${{ secrets.ARM_TENANT_ID }} \
             ${{ env.postgres_secret_name }} \
-            ${{ env.PGPASSWORD }} \
-            ${{ secrets.ENV }}
+            ${{ env.PGPASSWORD }}
             
 
