--- a/.github/workflows/labelstudio-deploy.yml
+++ b/.github/workflows/labelstudio-deploy.yml
@@ -21,7 +21,7 @@ env:
   namespace: "labelstudio-namespace"
   helm_release: "labelstudio-release"
   tls_secret_name: "ingress-tls-labelstudio"
-  postgres_secret_name: "postgres-dev-labelstudio"
+  postgres_secret_name: "${{ secrets.POSTGRES_SECRET_NAME }}"
   PGPASSWORD: "${{ secrets.PGPASSWORD }}"
 
 jobs:
