--- a/.github/workflows/labelstudio-deploy.yml
+++ b/.github/workflows/labelstudio-deploy.yml
@@ -23,6 +23,8 @@ env:
   tls_secret_name: "ingress-tls-labelstudio"
   postgres_secret_name: "postgres-labelstudio"
   PGPASSWORD: "${{ secrets.PGPASSWORD }}"
+  LABEL_STUDIO_USERNAME: "${{ secrets.LABEL_STUDIO_USERNAME }}"
+  LABEL_STUDIO_PASSWORD: "${{ secrets.LABEL_STUDIO_PASSWORD }}"
 
 jobs:
   deployment:
@@ -82,6 +84,8 @@ jobs:
             ${{ steps.kvsecrets.outputs.DB_PASSWORD }} \
             ${{ secrets.ARM_TENANT_ID }} \
             ${{ env.postgres_secret_name }} \
-            ${{ env.PGPASSWORD }}
+            ${{ env.PGPASSWORD }} \
+            ${{ env.LABEL_STUDIO_USERNAME }} \
+            ${{ env.LABEL_STUDIO_PASSWORD }}
             
 
